[workspace]
members = [
    "lib/candid_gen",
    "lib/ic_call_api",
    "lib/ic_call_backend",
    "lib/ic_call_client",
    "lib/ic_ledger",
    "lib/ic_identity",
    "lib/ic_governance",
    "lib/ic_cycles",
    "lib/ic_certification",
    "lib/dev_ledger",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
