[package]
name = "icgeek_dev_ledger"
version = "0.1.0"
edition = "2021"
description = "Library for emulate ledger in development mode."
license = "MIT"
repository = "https://github.com/ruby-light/icgeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.3"
serde = "1.0.147"






