[package]
name = "icgeek_ic_call_api"
version = "0.2.0"
edition = "2021"
description = "Library for execute internet computer calls."
license = "MIT"
repository = "https://github.com/ruby-light/icgeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.3"
serde = "1.0.147"






