[package]
name = "icgeek_ic_call_client"
version = "0.2.0"
edition = "2021"
description = "Library for execute internet computer calls."
license = "MIT"
repository = "https://github.com/ruby-light/icgeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icgeek_ic_call_api = "0.2.0"
ic-agent = "0.25.0"
#garcon = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.7"
serde_cbor = "0.11.2"
leb128 = "0.2.5"
backoff = "0.4.0"
tokio = "1.28.2"





