[package]
name = "icgeek_ic_ecdsa"
version = "0.1.0"
edition = "2021"
description = "Library for access to icdsa sing."
license = "MIT"
repository = "https://github.com/ruby-light/icgeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.3"
ic-cdk = "0.6.1"
serde = "1.0.147"




