[package]
name = "icgeek_ic_governance"
version = "0.2.3"
edition = "2021"
description = "Library for access to internet computer governance."
license = "MIT"
repository = "https://github.com/ruby-light/icgeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.3"
serde = "1.0.147"
serde_bytes = "0.11.7"
